# github-production-lab-python

./: .gitignore  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
src/lab/: __init__.py  math_utils.py
src/lab.egg-info/: SOURCES.txt  requires.txt
tests/: test_math_utils.py
